--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
       </section>
     </section>
 
+    <div class="footer">      
+      <p class="love">Made with <i class="fa-solid fa-heart" style="color: #ff0000;"></i> By Ashish Kumar  </p>
+    </div>
+
     <script src="./script.js"></script>
   </body>
 </html>
