--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
       </section>
     </section>
 
-    <div class="footer">      
+    <footer>      
       <p class="love">Made with <i class="fa-solid fa-heart" style="color: #ff0000;"></i> By Ashish Kumar  </p>
-    </div>
+    </footer>
 
     <script src="./script.js"></script>
   </body>
